# example-graphrag

./: app.py  graph_vis.py  log.txt  pyproject.toml  tw-font.py
example_text/: doc1.txt  doc2.txt  doc3.txt  doc4.txt  doc5.txt  doc6.txt
