[tool.poetry]
name = "example-graphrag"
version = "0.1.0"
description = ""
authors = ["yenslife <77geo5rge6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.54.3"
networkx = "^3.4.2"
leidenalg = "^0.10.2"
cdlib = "^0.4.0"
python-igraph = "^0.11.8"
python-dotenv = "^1.0.1"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
